--- a/20230123/index.html
+++ b/20230123/index.html
@@ -7,6 +7,15 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1 id="hello">안녕하세요</h1>
+    <h1 id="hi">JS 초보예요</h1>
+
+    <script>
+        // html문서의 id가 hello인 요소 찾기
+        let hello = document.getElementById('hello').innerHTML = '안녕';
+        hello = document.getElementById('hello').style.color = 'red';
+        let hi = document.getElementById('hi').innerHTML = 'JS 고수예요';
+        hi = document.getElementById('hi').style.fontSize = '1rem';
+    </script>
 </body>
 </html>
