구멍 함수 사용하기

--- a/alertBox/alertBox.html
+++ b/alertBox/alertBox.html
@@ -11,18 +11,22 @@
     <!-- UI 알아서 만드는 
     1. 미리 html/css 다자인
     2. 필요할 때 보여달라고 JS로 요청 -->
-    <div class="alert-box" id="alert">알림창<button onclick="alertClose()">닫기</button></div>
-    <button onclick="alertOpen()">버튼</button>
+    <div class="alert-box" id="alert">알림창<button onclick="alert('none');">닫기</button></div>
+    <button onclick="alert('block');">버튼</button>
 
     <script>
         // funcion : 코드를 짧게 축약해서 쓰고 싶을 때 function을 꺼내서 쓰면 된다.
         // 힘수 선언식
-        function alertOpen() {
-            document.getElementById('alert').style.display = 'block';
-        }
+        // function alertOpen() {
+        //     document.getElementById('alert').style.display = 'block';
+        // }
 
-        function alertClose() {
-            document.getElementById('alert').style.display = 'none';
+        // function alertClose() {
+        //     document.getElementById('alert').style.display = 'none';
+        // }
+
+        function alert(oc) {
+            document.getElementById('alert').style.display = oc;
         }
     </script>
 </body>
