함수의 파라미터 사용

--- a/alertBox/alertBox.html
+++ b/alertBox/alertBox.html
@@ -25,6 +25,7 @@
         //     document.getElementById('alert').style.display = 'none';
         // }
 
+        // 파라미터 사용
         function alert(oc) {
             document.getElementById('alert').style.display = oc;
         }
