--- a/alertBox/alertBox.html
+++ b/alertBox/alertBox.html
@@ -11,8 +11,12 @@
     <!-- UI 알아서 만드는 
     1. 미리 html/css 다자인
     2. 필요할 때 보여달라고 JS로 요청 -->
-    <div class="alert-box" id="alert">알림창<button onclick="alert('none');">닫기</button></div>
-    <button onclick="alert('block');">버튼</button>
+    <div class="alert-box" id="alert">
+        <p id="title">알림창</p>
+        <button>닫기</button>
+    </div>
+    <button onclick="idAlert('아이디를 입력하세요');">버튼1</button>
+    <button onclick="idAlert('비번을 입력하세요')">버튼2</button>
 
     <script>
         // funcion : 코드를 짧게 축약해서 쓰고 싶을 때 function을 꺼내서 쓰면 된다.
@@ -25,10 +29,17 @@
         //     document.getElementById('alert').style.display = 'none';
         // }
 
-        // 파라미터 사용
-        function alert(oc) {
-            document.getElementById('alert').style.display = oc;
+        function idAlert(title) {
+            // 1. p태그 내용을 아이디를 입력하세요 바꿈
+            document.getElementById('title').innerHTML = title;
+            // 2. 띄움
+            document.getElementById('alert').style.display = 'block';
         }
+       
+        // 파라미터 사용
+        // function alert(oc) {
+        //     document.getElementById('alert').style.display = oc;
+        // }
     </script>
 </body>
 </html>
