--- a/alertBox/submenu.html
+++ b/alertBox/submenu.html
@@ -31,7 +31,7 @@
 
     <script>
       document.getElementsByClassName('navbar-toggler')[0].addEventListener('click', function(){
-        document.getElementsByClassName('list-group')[0].classList.add('show');
+        document.getElementsByClassName('list-group')[0].classList.toggle('show');
       })
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
