--- a/alertBox/submenu.html
+++ b/alertBox/submenu.html
@@ -33,7 +33,7 @@
       // querySelector() : 맨 위에 나오는 한 개만 찾아줌
       // querySelectorAll()[] : ()안에 해당하는 모든 요소 다 찾음
       document.querySelector('.navbar-toggler').addEventListener('click', function(){
-        document.querySelector('.list-group').classList.toggle('show');
+        document.querySelectorAll('.list-group')[0].classList.toggle('show');
       })
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
