--- a/alertBox/submenu.html
+++ b/alertBox/submenu.html
@@ -10,6 +10,10 @@
 
     <title>SubMenu</title>
     <link rel="stylesheet" href="css/main.css">
+    <!-- jquery -->
+    <script src="https://code.jquery.com/jquery-3.6.3.min.js" 
+    integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" 
+    crossorigin="anonymous"></script>
   </head>
   <body>
     <nav class="navbar navbar-light bg-light">
@@ -29,13 +33,40 @@
       <li class="list-group-item">And a fifth one</li>
     </ul>
 
+    <p class="hello">안녕</p>
+    <p class="hello">안녕</p>
+    <p class="hello">안녕</p>
+    <button id="test-btn">버튼</button>
+
     <script>
       // querySelector() : 맨 위에 나오는 한 개만 찾아줌
       // querySelectorAll()[] : ()안에 해당하는 모든 요소 다 찾음
+      // $() : querySelector [jQuery설치시 사용할 수 있는 querySelector]
       document.querySelector('.navbar-toggler').addEventListener('click', function(){
         document.querySelectorAll('.list-group')[0].classList.toggle('show');
       })
+
+      // document.querySelector('.hello').innerHTML = '바보';
+      // jQuery로 html 내용 바꿈
+      $('.hello').html('바보');
+      // jQuery로 css 내용 바꿈
+      $('.hello').css('color', 'red');
+      // class 탈부착하는 코드도 짧아짐
+      // .removeClass() : 제거
+      // toggleClass() : 토클
+      $('.hello').addClass('show');
+
+      // addEventListener
+      // document.querySelector('#test-btn').addEventListener();
+      $('#test-btn').on('click', function(){
+        // hide() : 숨기기
+        // $('.hello').hide();
+        // slideUp, fadeOut
+        $('.hello').slideUp();
+      })
     </script>
+    
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
     
