css 애니메이션 만들기  one-way 애니메이션 : A상태 -> B상태 1. 시작스타일 2. 최종스타일 3. 원할 때 최종스타일로 변하라고 JS코드 작성 4. transition 추가

--- a/alertBox/modal.html
+++ b/alertBox/modal.html
@@ -49,13 +49,13 @@
 
         // 로그인버튼 클릭했을때
         $('.login-btn').on('click', function(){
-            // $('.black-bg').addClass('show-modal');
-            $('.black-bg').fadeIn();
+            $('.black-bg').addClass('show-modal');
+            // $('.black-bg').fadeIn();
         });
         // 닫기버튼 클릭했을때
         $('#close').on('click', function(){
-            // $('.black-bg').removeClass('show-modal');
-            $('.black-bg').fadeOut();
+            $('.black-bg').removeClass('show-modal');
+            // $('.black-bg').fadeOut();
         });
         </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
